# scAleBM

./: .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: schelling.ipynb
scalebm/: __init__.py  grid.py  test_grid.py
