[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scalebm"
authors = [{name = "Rémi Adon", email = "remi.adon@protonmail.com"}]
dynamic = ["version", "description"]
requires-python = ">=3.6"

dependencies = [
    "polars>=0.19.0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "black",
    "pre-commit",
]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
]
doc = ["sphinx"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
select = ["E", "F", "I", "UP"]  # https://beta.ruff.rs/docs/rules/
line-length = 100
target-version = 'py310'
ignore = ["E501"]

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]
